# QtQuick-Vs-Widgets

./: README.md
QuickVsWidgets_Section2a/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
QuickVsWidgets_Section2b/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QuickVsWidgets_Section3a/: CMakeLists.txt  Main.qml  main.cpp
QuickVsWidgets_Section3b/: QuickVsWidgets_Section3b.qmlproject
QuickVsWidgets_Section3b/QuickVsWidgets_Section3b/: Constants.qml  EventListModel.qml  EventListSimulator.qml  qmldir
QuickVsWidgets_Section3b/QuickVsWidgets_Section3b/designer/: plugin.metainfo
QuickVsWidgets_Section3b/QuickVsWidgets_Section3bContent/: App.qml  Screen01.ui.qml
QuickVsWidgets_Section5/: CMakeLists.txt  LineSeries2D.qml  PieSeries2D.qml  mainwindow.cpp  mainwindow.h
